fix: z-index

--- a/src/components/rating-card/RatingCard.scss
+++ b/src/components/rating-card/RatingCard.scss
@@ -12,7 +12,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 10;
+  z-index: 1500;
 }
 
 .rating-card__img {
